# ttastromech

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  example.py  pyproject.toml  readme.rst  setup.py
tests/: test_basic.py
ttastromech/: __init__.py  ttastromech.py  ttastromech_pyaudio.py
